Correct JDK references